done with the doc

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -38,7 +38,7 @@ under the License.
         >
       <% end %>
     <% end %>
-    <title><%= current_page.data.title || "API Documentation" %></title>
+    <title><%= current_page.data.title || "esoko's API Documentation" %></title>
 
     <style media="screen">
       <%= Rouge::Themes::MonokaiSublimeSlate.render(:scope => '.highlight') %>
